prevent flair popup from getting cutoff
set overflow to visible in link listing and wiki page and use manual
margin to prevent content from stretching into sidebar area. variable
$sidebar-width added to control the width of sidebar and to calculate
the margin of content

--- a/scss/_comments.scss
+++ b/scss/_comments.scss
@@ -1,4 +1,5 @@
 .commentarea {
+  overflow: hidden;
   border-top: solid 1px rgba(0, 0, 0, 0.2);
   @include shadow(inset 0px 1px 0px rgba(255, 255, 255, 0.7));
 
