--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -1,5 +1,6 @@
 .side {
   background: none;
+  width: $sidebar-width;
   margin: 1em 1em 1em 2em;
 }
 
