--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -16,6 +16,8 @@ $blue:            #268bd2;
 $cyan:            #2aa198;
 $green:           #859900;
 
+$sidebar-width:   300px;
+
 // --- these images are for local test
 $main-bg-image: 'image/noise.png';
 $header-bg-image: 'image/banner.png';
