--- a/terriblename.css
+++ b/terriblename.css
@@ -454,7 +454,8 @@ input[type=password] {
 }
 
 .fancy-settings {
-  margin: 10px;
+  padding: 10px;
+  overflow: hidden;
 }
 .fancy-settings .linefield {
   margin-bottom: 0.4em;
@@ -744,8 +745,10 @@ input[type=password] {
   border-top: solid 1px #202020;
 }
 
-.listing-page .linklisting {
-  overflow: hidden;
+.wiki-page > .content,
+.listing-page > .content {
+  overflow: visible;
+  margin-right: 330px;
 }
 
 .link .flat-list.buttons {
@@ -1092,6 +1095,7 @@ input[type=password] {
 }
 
 .commentarea {
+  overflow: hidden;
   border-top: solid 1px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.7);
   -moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.7);
@@ -1311,6 +1315,7 @@ input[type=password] {
 
 .side {
   background: none;
+  width: 300px;
   margin: 1em 1em 1em 2em;
 }
 
